<resources>
    <string name="app_name">Animation</string>

    <string name="ripple_effect">Ripple Effect</string>
    <string name="smartherd">Smartherd</string>
    <string name="ripple_with_border">Ripple With Border</string>
    <string name="ripple_without_border">Ripple Without Border</string>
    <string name="custom_ripple_with_border">Custom Ripple With Border</string>
    <string name="custom_ripple_without_border">Custom Ripple Without Border</string>
    <string name="exit">EXIT [Back Press]</string>
    <string name="welcome">Welcome to Smartherd.\n Stay tuned for more tutorials and courses.</string>
    <string name="description">Welcome to Smartherd. \n Stay turned for more tutorials and courses.</string>
    <string name="java_code">Java Code</string>
    <string name="xml">XML</string>
    <string name="explode_transition">Explode Transition</string>
    <string name="slide_transition">Slide Transition</string>
    <string name="fade_transition">Fade Transition</string>
</resources>
