<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RippleActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dummyClick"
        android:padding="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/ripple_with_border"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dummyClick"
        android:padding="20dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:text="@string/ripple_without_border"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dummyClick"
        android:padding="20dp"
        android:text="@string/custom_ripple_with_border"
        android:background="@drawable/custom_ripple_border"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dummyClick"
        android:padding="20dp"
        android:background="@drawable/custom_ripple_borderless"
        android:text="@string/custom_ripple_without_border"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>
</LinearLayout>