<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="checkRippleAnimation"
        android:text="@string/ripple_effect"/>

    <LinearLayout
        android:id="@+id/shared_element"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:onClick="sharedElementTransition"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imgSmartherdLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/imgsmartherdlogo"
            android:transitionName="logo_shared"/>

        <TextView
            android:id="@+id/txvSharedElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/smartherd"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:transitionName="smartherd_shared"/>

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profimage"
            android:transitionName="profile_pic_shared"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/explode_transition"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="explodeTransitionByCode"
            android:text="@string/java_code"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="explodeTransitionByXML"
            android:text="@string/xml"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/slide_transition"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="slideTransitionByCode"
            android:text="@string/java_code"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="slideTransitionByXML"
            android:text="@string/xml"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/fade_transition"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fadeTransitionByCode"
            android:text="@string/java_code"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fadeTransitionByXML"
            android:text="@string/xml"/>

    </LinearLayout>
</LinearLayout>