<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:id="@+id/click_reveal"
    tools:context=".SharedElement">

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smartherd"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        android:transitionName="smartherd_shared"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_title">

        <ImageView
            android:id="@+id/logo_reveal"
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:layout_weight="1"
            android:src="@drawable/imgsmartherdlogo"
            android:transitionName="logo_shared"/>

        <ImageView
            android:id="@+id/imgProf"
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:layout_weight="1"
            android:src="@drawable/imgsmartherdlogo"
            android:transitionName="profile_pic_shared"/>

    </LinearLayout>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="51dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>